--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "emoji-mart": "^5.6.0",
+    "firebase": "^11.10.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.525.0",
+    "moment": "^2.30.1",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
+    "npm": "^11.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-moment": "^1.1.3",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
